--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "zod": "^3.25.51"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
