DIA 5 – Autenticação + Rotas Protegidas (JWT + Cookies Seguros) Configuração e lógica de autenticação ✔️ Middleware backend verifyAuth.js criado para validar token JWT a partir dos cookies (com httpOnly, secure, sameSite, maxAge). ✔️ Criação das rotas POST /login, POST /logout, GET /me, e POST /register, com hash de senha usando bcrypt e geração de JWT via jsonwebtoken. ✔️ Inclusão de res.cookie() para salvar o token de forma segura no navegador e res.clearCookie() para logout limpo. ✔️ Testes via Postman confirmando autenticação, persistência de sessão e logout.
Integração completa com frontend (Next.js)
✔️ Criação do AuthContext com checkAuth, logout e controle global de isAuthenticated.
✔️ Header e mobile menu atualizados para renderizar dinamicamente: botão "Entrar", "Sair" e "Admin" com base na autenticação.
✔️ Adaptação do botão "Admin" para exibir "Voltar" quando estiver na rota /blog/admin, com uso do usePathname().

Página de Login
✔️ Tela de login criada com formulário estilizado, validações básicas, tratamento de erros e integração com /api/auth/login.
✔️ Controle de loading e feedback visual de erro para o usuário.
✔️ Redirecionamento automático ao fazer login com sucesso.

Rotas protegidas e cookies
✔️ Cookies com credentials: "include" configurados em todas as chamadas fetch do frontend.
✔️ Página /blog/admin protegida via middleware e autenticação via token nos cookies.
✔️ Condições de exibição baseadas na verificação GET /me, mantendo o usuário logado mesmo ao recarregar a página.

Correções e melhorias adicionais
✔️ Ajuste fino no CORS para permitir origem com cookies (Access-Control-Allow-Origin dinâmico e credentials: true).
✔️ Correção no estado de Header que causava inconsistência após logout e recarregamento.
✔️ Refatoração de headers e menus para lidar corretamente com estados nulos e transições de autenticação.
✔️ Atualização do Header para suportar Voltar condicional e manter o branding intacto.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - postgres
     environment:
       DATABASE_URL: "postgresql://wernetech_admin:admin_9876@postgres:5432/empresa"
+      JWT_SECRET: "2fb7b9dc6cf44c0a928b0e9f41f3c9286bb35fef7d1a411c6c88b85b6e007c78"
     volumes:
       - .:/app
       - /app/node_modules
