--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,17 @@ FROM node:20
 
 WORKDIR /app
 
+# Instala dependências
 COPY package*.json ./
 RUN npm install
 
+# Copia o restante do código
 COPY . .
+
+# Build para produção
+RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+# Roda o Next.js em produção
+CMD ["npm", "start"]
