Correção no docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "3002:3000"
     environment:
-      NEXT_PUBLIC_API: http://localhost:4000
+      NEXT_PUBLIC_API: http://wernetech_backend:4000
     depends_on:
       - backend
 
