Correções finais para deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - "3002:3000"
     environment:
       NEXT_PUBLIC_API: http://5.161.71.249/api
+      EMAIL_IP: 5.161.71.249
     depends_on:
       - backend
   
