--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
