--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
-    "framer-motion": "^12.16.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "quill": "^2.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-spring": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
