--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "dayjs": "^1.11.13",
     "pg": "^8.16.0",
     "postgres": "^3.4.7"
   }
