--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       DATABASE_URL: "postgresql://wernetech_admin:admin_9876@postgres:5432/empresa"
       JWT_SECRET: "2fb7b9dc6cf44c0a928b0e9f41f3c9286bb35fef7d1a411c6c88b85b6e007c78"
       PORT: 4000
-      EMAIL_IP: 5.161.71.249
+      EMAIL_IP: wernetech.com
       SMTP_HOST: "mail.wernetech.com"
       SMTP_PORT: "587"
       SMTP_SECURE: "false"
@@ -46,7 +46,7 @@ services:
     ports:
       - "3002:3000"
     environment:
-      NEXT_PUBLIC_API: http://5.161.71.249/api
+      NEXT_PUBLIC_API: https://wernetech.com/api
     depends_on:
       - backend
   
@@ -56,11 +56,25 @@ services:
     restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - frontend
       - backend
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: >
+      sh -c "certbot certonly --webroot --webroot-path=/var/www/certbot
+      --email anderson@wernetech.com --agree-tos --no-eff-email
+      -d wernetech.com -d www.wernetech.com"
 
 volumes:
   pgdata:
