--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,30 @@
+# Redireciona tudo que chega no HTTP (porta 80) para HTTPS
 server {
     listen 80;
-    server_name 5.161.71.249;
+    server_name wernetech.com www.wernetech.com;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS com certificados gerados
+server {
+    listen 443 ssl;
+    server_name wernetech.com www.wernetech.com;
+
+    ssl_certificate /etc/letsencrypt/live/wernetech.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/wernetech.com/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
     location /api/ {
-        proxy_pass http://wernetech_backend:4000;
+        proxy_pass https://wernetech_backend:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -12,7 +33,7 @@ server {
     }
 
     location / {
-        proxy_pass http://wernetech_frontend:3000/;
+        proxy_pass https://wernetech_frontend:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -20,4 +41,3 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 }
-
